--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,9 +2,11 @@
 
   <p><%= @recipe.name %></p>
   <p><%= @recipe.ingredients %></p>
+  <p><%= @recipe.cook_time %></p>
 
   <form action = "/posts/<%=@post.id %>/delete" method = "post">
     <input id="hidden" type="hidden" name="_method" value="delete">
     <input type="submit" value="delete">
   </form>
 </div>
+s
