--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,10 +1,10 @@
-<div class="post">
+<div class="recipe">
 
   <p><%= @recipe.name %></p>
   <p><%= @recipe.ingredients %></p>
   <p><%= @recipe.cook_time %></p>
 
-  <form action = "/posts/<%=@post.id %>/delete" method = "post">
+  <form action = "/recipes/<%=@post.id %>/delete" method = "post">
     <input id="hidden" type="hidden" name="_method" value="delete">
     <input type="submit" value="delete">
   </form>
