--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <h1>New Recipe</h1>
-<form action="/photos" method="POST">
+<form action="/recipes" method="POST">
   <input type="text" name="name" placeholder="Name:">
   <input type="text" name="ingredients" placeholder="Ingredients:">
   <input type="integer" name="cook_time" placeholder="Cook Time:">
