--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,7 +2,7 @@
 
   <p><%= @recipe.name %></p>
   <p><%= @recipe.ingredients %></p>
-  <p><%= @recipe.cook_time %></p>
+  <p><%= @recipe.cook_time %> minutes</p>
 
   <form action = "/recipes/<%=@post.id %>/delete" method = "post">
     <input id="hidden" type="hidden" name="_method" value="delete">
