--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,3 @@
 <% @recipes.each do |recipe| %>
-  <%binding.pry%>
-  <a href="/recipes/<%=recipes.id %>"><% recipes.name %></a>
+  <a href="/recipes/<%=recipe.id %>"><%recipe.name%></a>
 <% end %>
