--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <% @recipes.each do |recipe| %>
-  <a href= "/recipes/<%=recipe.id%>"><%=recipe.name%></a>
+  <p><a href= "/recipes/<%=recipe.id%>"><%=recipe.name%></a></p>
 <% end %>
