--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -5,5 +5,5 @@
   <p><%= @recipe.cook_time%> minutes</p>
   <form action = "/recipes/<%=@recipe.id%>/delete" method = "post">
     <input id="hidden" type="hidden" name="_method" value="delete">
-    <input type="submit" value="delete">
+    <input type="submit" value="Delete">
   </form>
